# ldz-dash

./: .editorconfig  .gitignore  README.md  flake.nix  install.sh  pyproject.toml  treefmt.nix
.github/workflows/: deploy.yaml  merge.yaml  sync.yaml
checks/pre-commit/: default.nix
data/: migrate.sh
shells/python/: default.nix
src/: __init__.py  data.py  login.py  settings.py  user.py  view.py
src/blueprints/: __init__.py
src/blueprints/admin/: __init__.py
src/blueprints/admin/data/: __init__.py
src/blueprints/admin/user/: __init__.py
src/blueprints/api/: __init__.py
src/blueprints/auth/: __init__.py
src/blueprints/data/: __init__.py
src/blueprints/home/: __init__.py
src/blueprints/user/: __init__.py
src/options/: departments.json  levels.json  locations.json  referrals.json  topics.json
src/static/: _main.css  charts.css  flash.css  form.css  sidenav.css  table.css  topnav.css
src/templates/: _base.html  _layout.html  confirm.html  flash.html
src/templates/admin/data/: data.html  download.html
src/templates/admin/user/: add.html  edit.html  view.html
src/templates/auth/: login.html
src/templates/data/: _form.html  edit.html
src/templates/data/embedded/: as&d.html  masa.html
src/templates/data/regular/: as&d.html  masa.html
src/templates/home/: index.html
src/templates/user/: settings.html
wsgi/: test.sh  wsgi.ini  wsgi.py
